@@ -9,7 +9,7 @@
     <script src="../../api/exhibit-api.js"></script>
 
     <!-- Replace the URL here with http://api.simile-widgets.org/exhibit/2.2.0/extensions/timeplot/timeplot-extension.js -->
-    <script src="../../api/extensions/timeplot/timeplot-extension.js?bundle=false"></script>
+    <script src="../../api/extensions/timeplot/timeplot-extension.js"></script>
 
     <script type="text/javascript">
       var timeGeometer = function(grid) {
